assets/css/main.css
@charset "utf-8";

body {
    color: white;
    background-color: #333333;
    font-family: JetBrains Mono, Verdana, Geneva, Tahoma, sans-serif;
}

textarea {
    resize: none;
    font-family: JetBrains Mono, Verdana, Geneva, Tahoma, sans-serif;
}

input[type=date]{
    font-family: JetBrains Mono, Verdana, Geneva, Tahoma, sans-serif;
}

hr {
    border: 1px dashed grey;
    width: 75%;
}

table {
    border-spacing: 1px;
    border-collapse: separate;
}

td, th {
    border: none;
    color: white;
    padding-inline: 6px;
}

tr:nth-child(even){background-color: #1f2223;}
tr:nth-child(odd){background-color: #181A1B;}

th {
    padding-top: 5px;
    padding-bottom: 5px;
    text-align: center;
    background-color: #673ab7;
    color: white;
}

dt {
    font-style: italic;
}

/*img {
    -webkit-filter: drop-shadow(1px 1px 1px white)
                drop-shadow(-1px 1px 1px white)
                drop-shadow(1px -1px 1px white)
                drop-shadow(-1px -1px 1px white);

    filter: drop-shadow(1px 1px 1px white)
            drop-shadow(-1px 1px 1px white)
            drop-shadow(1px -1px 1px white)
            drop-shadow(-1px -1px 1px white);
}*/

.title {
    position: relative;
    font-size: max(25px, 3.5vw);
    text-align: left;
    color: #744fca;
    text-shadow: 4px 6px #222;
    z-index: 1;
}

.iconContainer {
    position: relative;
    display: inline-block;
    top: 1.25vw;
    left: 4vw;
    z-index: 0;
}

.favIcon {
    height: 6vw;
    display: inline-block;
    text-align: center;
}

.foot {
    text-align: center;
    color: #a0a0a0;
}

.socialLink {
    display: inline-block;
    background-color:#444;
    border-radius: 50px;
    width: 100%;
}

.navButton, .subButton {
    display: inline-block;
    text-align: center;
    color: azure;
    font-weight: bold;
    text-decoration: none;
    width: 12vw;
    border-radius: 5px;
}

.subButton {
    width: 75% !important;
    border-radius: 0px !important;
}

.navButton:hover{
    background-color: #4f3789;
}

.subButton:hover{
    background-color: #303030;
}

.navBar {
    position: relative;
    text-align: center;
    background-color: #673ab7;
    border-radius: 7px;
}

.subBar {
    text-align: center;
    background-color: #333;
    border-radius: 1px;
}

.navButton.active {
    font-weight: bolder;
    text-shadow: 2px 2px #444;
    background-color: #845fda;
}

.subButton.active {
    font-weight: bolder;
    box-shadow: inset 0 -2px white;    
}

.form-input, .form-select, .form-radio{
    width: 100%;
    font-size: large;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    color:rgb(200, 200, 200);
    background-color: #2b2a33;
    border: 2px solid #744fca;
    border-radius: 4px;
    box-sizing: border-box;
}

.form-input:focus, .form-select:focus{
    outline: 2px solid #845fda;
}

.form-err input, .form-err textarea {
    border: 2px solid #ff2222;
}

.form-err input:focus, .form-err textarea:focus {
    outline: 2px solid #ff4343;
}

.form-err input[type=radio]:focus{
    outline: none;
}

.form-err label{
    color: #ff2222;
}

.help-block{
    text-transform: uppercase;
    font-weight: bold;
    color: #ff2222;
    text-align: center;
}
  
.btn{
    width: 100%;
    background-color: #744fca;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}
  
.btn:hover {
    background-color: #845fda;
}
  
.form {
    border-radius: 5px;
    background-color: #222;
    padding: 20px;
}

.success-box {
    border-radius: 15px;
    padding-block: 10px;
    text-transform: uppercase;
    font-weight: bold;
    background-color: #22cc77aa;
    text-align: center;
}

.comment {
    width: 100%;
    font-size: 20px;
    color:white;
    background-color: #444;
    border-radius: 50px;
    padding: 25px;
    font-weight: 1000;
    text-indent: 50px;
}

.comment-help {
    width: 100%;
    background-color: #222;
    border-radius: 50px;
    padding: 25px;
    font-size: 20px;
}

.comment.label{
    background-color: #333 !important;
    font-size: x-large;
    padding: 5px !important;
    padding-right: 2em;
    text-align: right !important;
}

#neofetch {
    background-color: #222;
    border-radius: 5px;
}

#myFace {
    border-radius: 5px;
}

